# qr-control

./: CMakeLists.txt  main.cpp  package.xml
config/: control_config.xml  gait_config.cfg  position_joint_group_controller.yaml  qr.urdf  reset_msg.yaml  trial_msg.yaml
include/: mii_control.h  trajectory.h
include/adt/: geometry.h  seg_trajectory.h  test_trajectory.cpp  trajectory.h
include/adt/internal/: comma_init.h  geometry.h
include/gait/: gait_base.h  gait_manager.h
include/gait/agent/: rl_agent.h
include/gait/creep/: creep.h
include/gait/rock/: rock.h
include/gait/sl/: hopping.h
include/gait/test/: test_traj.h
include/gait/trot/: trot.h
include/gait/walk/: foot_contact.h  gesture_control.h  math.h  swing.h  ultility.h  walk.h
include/qr_control/: foot_contact.h  gesture_control.h  math.h  position_joint_group_controller.h  swing.h  ultility.h
include/robot/: data_leg.h  leg_robot.h  math_leg.h  qr_robot.h  robot_body.h  robot_leg.h
include/robot/body/: data_body.h  math_body.h  qr_body.h  robot_body.h
include/robot/leg/: data_leg.h  math_leg.h  qr_leg.h  robot_leg.h
include/robot/origin/: origin.h  origin_test.h
launch/: position_joint_group_controller.launch
qr_control/: CMakeLists.txt  package.xml  paras.txt
qr_control/config/: joint_group.yaml  position_joint_group_controller.yaml
qr_control/include/qr_control/: foot_contact.h  gesture_control.h  math.h  position_joint_group_controller.h  swing.h  ultility.h
qr_control/launch/: position_joint_group_controller.launch
qr_control/src/: JY901.cpp  foot_contact.cpp  gesture_control.cpp  math.cpp  position_joint_group_controller.cpp  swing.cpp  uart_test.cpp
src/: foot_contact.cpp  main.cpp  mii_control.cpp  position_joint_group_controller.cpp  swing.cpp  trajectory.cpp
src/adt/: geometry.cpp
src/gait/: gait_base.cpp  gait_manager.cpp
src/gait/agent/: rl_agent.cpp
src/gait/creep/: creep.cpp
src/gait/rock/: rock.cpp
src/gait/sl/: hopping.cpp
src/gait/test/: test_traj.cpp
src/gait/trot/: trot.cpp
src/gait/walk/: foot_contact.cpp  gesture_control.cpp  math.cpp  swing.cpp  walk.cpp
src/qr_control/: foot_contact.cpp  gesture_control.cpp  math.cpp  position_joint_group_controller.cpp  swing.cpp
src/robot/: data_leg.cpp  leg_robot.cpp  math_leg.cpp  qr_robot.cpp  robot_body.cpp  robot_leg.cpp
src/robot/body/: data_body.cpp  qr_body.cpp  robot_body.cpp
src/robot/leg/: data_leg.cpp  math_leg.cpp  qr_leg.cpp  robot_leg.cpp
src/robot/origin/: origin.cpp  origin_test.cpp
